--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation("com.codepath.libraries:asynchttpclient:2.2.0")
+    implementation("com.loopj.android:android-async-http:1.4.9")
+    implementation("com.github.bumptech.glide:glide:4.13.0")
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
